Hotfix for deprecated functions in java21